Switch to font awesome for all install, edit, etc icons

--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/caHelp.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/caHelp.page
@@ -1,6 +1,5 @@
 Menu="HiddenMenuItem"
-Title="Manual"
-Icon="help.png"
+Title="Community Applications Manual"
 ---
 <script>
 var URL = "/plugins/community.applications/include/manualExec.php";
