--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
@@ -1,5 +1,5 @@
 Menu="Apps"
-Icon="community.applications.png"
+Icon="CA.png"
 Title="Community Applications"
 ---
 <?
@@ -60,8 +60,8 @@ input.sortButton {margin:1px;}
 input.dirButton {margin:1px;}
 input.allButtons {margin:-1px;}
 input[type=checkbox] {width:20px; height:20px;}
-.enabledIcon { cursor:pointer;background-color:<?=$iconEnabledColor?>;height:35px;border-radius:5px;padding:5px;}
-.disabledIcon { background-color:<?=$iconDisabledColor?>;height:35px;border-radius:5px;padding:5px;opacity: 0.2;}
+.enabledIcon { cursor:pointer;color:#005500;font-size:35px; }
+.disabledIcon { cursor:pointer;color:#040404;font-size:35px; }
 .pinned { cursor:pointer;font-size:15px;color:green;padding:3px;}
 .unpinned { cursor:pointer;font-size:15px;color:red;padding:3px; -webkit-transform: rotate(20deg);-moz-transform: rotate(20deg);-ms-transform: rotate(20deg);-o-transform: rotate(20deg);transform: rotate(20deg);}
 .topRightLinks { padding-left:15px; }
@@ -1376,10 +1376,15 @@ function resizeDisplay() {
 > Hovering over an application's icon (or clicking it) will display more information about the application<br>
 > <center>For support for this plugin, visit here: <a title='click for help' href="http://lime-technology.com/forum/index.php?topic=40262.0" target="_blank">http://lime-technology.com/forum/index.php?topic=40262.0</a></center>
 
-<img id='sectionIcon' class='ca_section enabledIcon' src='/plugins/community.applications/images/SectionIconNew.png'>
+<!-- <img id='sectionIcon' class='ca_section enabledIcon' src='/plugins/community.applications/images/SectionIconNew.png'>
 <img id='categoryIcon' class='ca_categories enabledIcon' src='/plugins/community.applications/images/CategoryIconNew.png'>
 <img id='subcategoryIcon' class='ca_subcategories disabledIcon' src='/plugins/community.applications/images/SubCategoryIconNew.png'>
-<img id='sortIcon' class='ca_toolsView disabledIcon' height='35px;' src='/plugins/community.applications/images/ViewIconNew.png'>
+<img id='sortIcon' class='ca_toolsView disabledIcon' height='35px;' src='/plugins/community.applications/images/ViewIconNew.png'> -->
+<i id='sectionIcon' class='fa fa-bars ca_section enabledIcon' aria-hidden='true'></i>&nbsp;
+<i id='categoryIcon' class='fa fa-folder ca_categories enabledIcon' style='font-size:30px;' aria-hidden='true'></i>&nbsp;
+<i id='subcategoryIcon' class='fa fa-folder-open ca_subcategories disabledIcon' style='font-size:30px;' aria-hidden='true'></i>&nbsp;
+<i id='sortIcon' class='fa fa-binoculars ca_toolsView disabledIcon' style='font-size:30px;' aria-hidden='true'></i>&nbsp;
+
 <font size='3'><b>Current Section: <font color='green'><span id='currentSection'>Available Apps</span></font></b></font>
 <strong><font size='3'><span id="Category"></span></strong></font><span id="Total1" style='float: right';>Total Found: <strong><font size="3"><span id="Total"></span></font></strong><span>&nbsp;&nbsp;Results/page: <select id='maxPerPage' class='narrow' onchange='changeDisplayed();'><option value='10'>10</option><option value='25'>25</option><option value='50'>50</option><option value='100'>100</option><option value='-1'>All</option></select></span></span>
 </span><br>
