--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/caHelp.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/caHelp.page
@@ -1,5 +1,6 @@
 Menu="HiddenMenuItem"
-Title="Community Applications Manual"
+Title="Manual"
+Icon="help.png"
 ---
 <script>
 var URL = "/plugins/community.applications/include/manualExec.php";
